# checking-code

./: .gitignore  README.md
checking/: README.md
checking-code/: alembic.ini  pyproject.toml
checking-code/src/checking_code/: main.py
checking-code/src/checking_code/apps/: __init__.py
checking-code/src/checking_code/apps/assignments/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/apps/auth/: depends.py  managers.py  routes.py  schemas.py  services.py  utils.py
checking-code/src/checking_code/apps/groups/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/apps/lessons/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/apps/students/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/apps/subjects/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/apps/teachers/: managers.py  routes.py  schemas.py  services.py
checking-code/src/checking_code/core/: settings.py
checking-code/src/checking_code/core/core_dependency/: db_dependency.py
checking-code/src/checking_code/database/alembic/: env.py
checking-code/src/checking_code/database/enums/: status.py
checking-code/src/checking_code/database/mixins/: id_mixins.py  timestamp_mixins.py
checking-code/src/checking_code/database/models/: __init__.py  assignment.py  base.py  group.py  lesson.py  student.py  subject.py  teacher.py
docs/: README.md
edu-db/: README.md  edudb_backup251025.sql
edubackend/: main.py  requirements.txt  test_backend.py
(+31 files in other folders)
